basic/10-basic-error-handling/src/main/java/com/example/error/BasicErrorHandlingApplication.java
package com.example.error;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

/**
 * Main application class for the Basic Error Handling mini-project.
 */
@SpringBootApplication
public class BasicErrorHandlingApplication {

    public static void main(String[] args) {
        SpringApplication.run(BasicErrorHandlingApplication.class, args);
    }
}
